Bugfix overflow-x for phone screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,6 @@
     margin: 0;
     border: none;
     scroll-behavior: smooth;
-    overflow-x: hidden;
 }
 
 /*fonts*/
@@ -255,6 +254,11 @@ textarea {
 
 phone screen layout*/
 @media screen and (max-width: 480px) {
+    * {
+        overflow-x: hidden;
+        scroll-behavior: smooth;
+    }
+
     .video {
         width: 287px;
         height: 159px;
